RESOLVED FIXED101234
[BlackBerry] Input date should not popup dialog when readonly is set
https://bugs.webkit.org/show_bug.cgi?id=101234
Summary [BlackBerry] Input date should not popup dialog when readonly is set
Rob Buis
Reported 2012-11-05 10:39:17 PST
SSIA
Attachments
Patch (2.14 KB, patch)
2012-11-05 12:28 PST, Rob Buis
yong.li.webkit: review+
Rob Buis
Comment 1 2012-11-05 12:28:12 PST
Yong Li
Comment 2 2012-11-05 12:36:31 PST
Comment on attachment 172377 [details] Patch LGTM
Rob Buis
Comment 3 2012-11-05 12:47:47 PST
Note You need to log in before you can comment on or make changes to this bug.