[BlackBerry] Input date should not popup dialog when readonly is set https://bugs.webkit.org/show_bug.cgi?id=101234

Reviewed by Yong Li.

PR 236114

Reviewed internally by Mike Fenton.

Suppress popup dialog if the input element has readonly attribute set.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::openDatePopup):
(BlackBerry::WebKit::InputHandler::openColorPopup):

Canonical link: https://commits.webkit.org/119333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133515 268f45cc-cd09-0410-ab3c-d52691b4dbfc